<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink_light"
    tools:context=".Skoreboardc"
    android:padding="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/sbcteam"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/pink_medium">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teamname"
            android:id="@+id/Teamname"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/innings"
            android:text="2nd Innings"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"/>


    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/sbcscoretab"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sbcteam"
        android:background="@color/pink_medium">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sbcscore"
            android:textSize="36sp"
            android:text="@string/_0_0"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sbcover"
            android:text="@string/_10_2_of_20"
            android:textSize="20sp"
            android:layout_alignBaseline="@id/sbcscore"
            android:paddingLeft="8dp"
            android:layout_toRightOf="@id/sbcscore" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sbccrr"
            android:text="@string/crr"
            android:layout_alignTop="@id/sbcscore"
            android:layout_alignParentRight="true"
            android:paddingRight="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sbcrunrate"
            android:text="0.00"
            android:layout_alignBaseline="@id/sbcscore"
            android:layout_alignParentRight="true"
            android:paddingRight="15dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/sbcinptab"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sbcscoretab"
        android:background="@color/pink_medium">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sbcwide"
            android:text="Wide"
            android:onClick="bcbwide"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sbcnoball"
            android:text="No Ball"
            android:onClick="bcbnoball"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/sbcwide" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sbcwicket"
            android:text="Wicket"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/sbcnoball" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sbcbye"
            android:text="Bye"
            android:onClick="bcbbye"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/sbcwicket" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:id="@+id/sbcruntab"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sbcinptab"
        android:background="@color/pink_medium">
        <Button
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/_6"
            android:onClick="bsix"
            android:id="@+id/sbcsix"
            android:backgroundTint="@color/green_001"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="10dp"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/_5"
            android:id="@+id/sbcfive"
            android:onClick="bfive"
            android:backgroundTint="@color/green_001"
            android:layout_toRightOf="@id/sbcsix"
            android:layout_marginLeft="15dp"
            android:layout_alignTop="@+id/sbcsix"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/_4"
            android:id="@+id/sbcfour"
            android:onClick="bfour"
            android:backgroundTint="@color/green_001"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/sbcfive"
            android:layout_alignTop="@+id/sbcsix"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/_3"
            android:id="@+id/sbcthree"
            android:onClick="bthree"
            android:backgroundTint="@color/green_001"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/sbcfour"
            android:layout_alignTop="@+id/sbcsix"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/_2"
            android:id="@+id/sbctwo"
            android:onClick="btwo"
            android:backgroundTint="@color/green_001"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/sbcthree"
            android:layout_alignTop="@+id/sbcsix"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/_1"
            android:id="@+id/sbcone"
            android:onClick="bone"
            android:backgroundTint="@color/green_001"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="60dp" />
        <Button
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:id="@+id/sbczero"
            android:onClick="bzero"
            android:backgroundTint="@color/green_001"
            android:layout_toRightOf="@id/sbcone"
            android:layout_marginLeft="15dp"
            android:layout_alignTop="@+id/sbcone"/>

    </RelativeLayout>
        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/home_team_wins"
            android:textSize="25sp"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sbcruntab"/>

</androidx.constraintlayout.widget.ConstraintLayout>